--- a/src/main/resources/templates/NonLoginMain.html
+++ b/src/main/resources/templates/NonLoginMain.html
@@ -34,7 +34,7 @@
             justify-content: center;
         }
         .main-img{
-            background-image: url('/mainimg.jpg');
+            background-image: url('images/mainimg.jpg');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -78,7 +78,7 @@
 <div>
     <header>
         <div class="top-header">
-            <a><img src="/hamorestLogo.jpg" width="80" height="100%"></a>
+            <a><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
 
             <div>
                 <div><a href="">로그인/회원가입</a></div>
