--- a/src/main/resources/templates/NonLoginMain.html
+++ b/src/main/resources/templates/NonLoginMain.html
@@ -88,7 +88,7 @@
             <a><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
 
             <div>
-                <div><a href="">로그인/회원가입</a></div>
+                <div><a href="/login">로그인/회원가입</a></div>
             </div>
         </div>
     </header>
