회원가입로그인된다

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -8,18 +8,18 @@
 
 <h1>JOIN PAGE</h1>
 <form name="joinform" action="/join" method="post" onsubmit="return false">
-    USERNAME : <input name="username" /> <br/>
-    PASSWORD : <input name="password" type="password" /> <br/>
+    USERNAME : <input name="UserId" /> <br/>
+    PASSWORD : <input name="UserPassword" type="password" /> <br/>
     <button onclick="isValid()">가입요청</button>
 </form>
 
 <script>
     const form = document.joinform;
     const isValid=()=>{
-        if(form.username.value.trim()==""){
+        if(form.UserId.value.trim()==""){
            alert("USERNAME은 반드시 입력해야 합니다.");
            return ;
-        }else if(form.password.value.trim()==""){
+        }else if(form.UserPassword.value.trim()==""){
            alert("PASSWORD는 반드시 입력해야 합니다.");
            return ;
         }
@@ -27,6 +27,7 @@
     }
 
 </script>
+</body>
 
 
 </html>
