--- a/src/main/resources/templates/NonLoginMain.html
+++ b/src/main/resources/templates/NonLoginMain.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,9 +87,24 @@
         <div class="top-header">
             <a><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
 
-            <div>
-                <div><a href="/login">로그인/회원가입</a></div>
+            <div th:if="${authentication == null}">
+                <!-- 로그인하지 않은 경우 -->
+                <a th:href="@{/login}">로그인/회원가입</a>
             </div>
+
+            <div th:if="${authentication != null}">
+                <!-- 로그인한 경우 -->
+                <span style="color : red;">환영합니다</span><span th:text="${authentication.name}">user</span>님
+                <form method="post" action="/logout">
+                    <button class="logout-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
+                            <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
+                        </svg>로그아웃
+                    </button>
+                </form>
+            </div>
+
         </div>
     </header>
 
