--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<a href="/"><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
+
 <h1>LOGIN PAGE</h1>
 <form action="/login" method="post">
     USERNAME : <input name="username" /> <br/>
