--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,10 +25,10 @@
                 <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
                 <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <span>가입 정보를 입력해주세요.</span>
+            <span>가입하기 위한 정보를 입력해주세요.</span>
             <input type="text" name="UserId" placeholder="Id" />
             <input type="password" name="UserPassword" placeholder="Password" />
-<!--            <input type="text" placeholder="Name" />-->
+            <input type="text" name="UserName" placeholder="Name" />
             <button onclick="isValid()">가입</button>
         </form>
     </div>
