심장이아파

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,6 +29,8 @@
             <input type="text" name="UserId" placeholder="Id" />
             <input type="password" name="UserPassword" placeholder="Password" />
             <input type="text" name="UserName" placeholder="Name" />
+            <input type="text" name="UserBirth" placeholder="Birth ex)19980101" />
+            <input type="text" name="UserPhone" placeholder="Phone ex)01012341234" />
             <button onclick="isValid()">가입</button>
         </form>
     </div>
@@ -58,6 +60,7 @@
                 <h1>하모휴식스!</h1>
                 <p>계정이 없으시다면 아래 버튼을 눌러 가입을 해주세요.</p>
                 <button class="ghost" id="signUp">가입 하러가기</button>
+                <a href="/ownerLogin"><button class="ghost" style="margin-top : 15px;">비즈니스 로그인/회원가입</button></a>
             </div>
         </div>
     </div>
