--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -45,9 +45,9 @@ a {
 
 button {
   border-radius: 20px;
-  border: 1px solid #FF4B2B;
-  background-color: #FF4B2B;
-  color: #FFFFFF;
+  border: 1px solid #F0AD69;
+  background-color: #F0AD69;
+  color: #F0AD69;
   font-size: 12px;
   font-weight: bold;
   padding: 12px 45px;
@@ -66,11 +66,11 @@ button:focus {
 
 button.ghost {
   background-color: transparent;
-  border-color: #FFFFFF;
+  border-color: #E5D0AC;
 }
 
 form {
-  background-color: #FFFFFF;
+  background-color: #3E797C;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,7 +89,7 @@ input {
 }
 
 .container {
-  background-color: #fff;
+  background-color: #3E797C;
   border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),
       0 10px 10px rgba(0,0,0,0.22);
@@ -159,13 +159,13 @@ input {
 }
 
 .overlay {
-  background: #FF416C;
-  background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-  background: linear-gradient(to right, #FF4B2B, #FF416C);
+  background: #17353B;
+  background: -webkit-linear-gradient(to right, #17353B, #3E797C);
+  background: linear-gradient(to right, #17353B, #3E797C);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
-  color: #FFFFFF;
+  color: #3E797C;
   position: relative;
   left: -100%;
   height: 100%;
