--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,6 +26,7 @@
                 <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <span>가입하기 위한 정보를 입력해주세요.</span>
+            <input type="hidden" id="role" name="role" value="ROLE_USER">
             <input type="text" name="UserId" placeholder="Id" />
             <input type="password" name="UserPassword" placeholder="Password" />
             <input type="text" name="UserName" placeholder="Name" />
