--- a/src/main/resources/templates/ownerLogin.html
+++ b/src/main/resources/templates/ownerLogin.html
@@ -13,7 +13,7 @@
 
     <div class="container" id="container">
         <div class="form-container sign-up-container">
-            <form name="joinform" action="/joinOwner" method="post" onsubmit="return false">
+            <form name="joinform" action="/join" method="post" onsubmit="return false">
                 <h1>비즈니스 회원가입</h1>
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -21,10 +21,12 @@
                     <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>가입하기 위한 정보를 입력해주세요.</span>
-                <input type="text" name="OwnerId" placeholder="Id" />
-                <input type="password" name="OwnerPassword" placeholder="Password" />
-                <input type="text" name="OwnerEmail" placeholder="Email" />
-                <input type="text" name="OwnerPhone" placeholder="Phone ex)01012341234" />
+                <input type="hidden" id="role" name="role" value="ROLE_MEMBER">
+                <input type="text" name="UserId" placeholder="Id" />
+                <input type="password" name="UserPassword" placeholder="Password" />
+                <input type="text" name="UserName" placeholder="Name" />
+                <input type="text" name="UserBirth" placeholder="Birth ex)19980101" />
+                <input type="text" name="UserPhone" placeholder="Phone ex)01012341234" />
                 <button onclick="isValid()">가입</button>
             </form>
         </div>
@@ -74,10 +76,10 @@
 
     const form = document.joinform;
     const isValid=()=>{
-        if(form.OwnerId.value.trim()==""){
+        if(form.UserId.value.trim()==""){
            alert("아이디는 반드시 입력해야 합니다.");
            return ;
-        }else if(form.OwnerPassword.value.trim()==""){
+        }else if(form.UserPassword.value.trim()==""){
            alert("비밀번호는 반드시 입력해야 합니다.");
            return ;
         }
