--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -85,7 +85,7 @@
 <div>
     <header>
         <div class="top-header">
-            <a href="/NonLoginMain.html"><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
+            <a href="/main"><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
 
             <div th:if="${authentication == null}">
                 <!-- 로그인하지 않은 경우 -->
