--- a/src/main/resources/templates/ownerMain.html
+++ b/src/main/resources/templates/ownerMain.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </head>
 <body>
-관리자 페이지 입니다.
+<a href="/ownerMain"><img src="/images/hamorestLogo.jpg" width="80" height="100%"></a>
+
+<a href="/owner/hotelAdd"><button>숙소 등록</button></a>
+<a href="/owner/ownerInfo"><button>내 정보</button></a>
+<a href="/owner/hotelManage"><button>숙소 관리</button></a>
 </body>
 </html>
