춥다집갈래

--- a/src/main/resources/templates/admin/hotelPermit.html
+++ b/src/main/resources/templates/admin/hotelPermit.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 관리자 > 숙소승인 페이지
+
+<div class="middle-main">
+    <div style="display : flex;">
+        <div class="hotel" th:each="hotel : ${hotels}">
+            <a th:href="'/reservation/'+${hotel.hotelId}">
+                <div class="hotel-1">
+                    <img src="images/hotel1.jpg" alt="Hotel Image 1">
+                    <div th:text="${hotel.hotelName}" style="text-align: center; margin: 5px 0px;">숙소명</div>
+                    <div th:text="${hotel.hotelAddr}" style="text-align: center;">주소</div>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
