--- a/src/main/resources/templates/owner/hotelAdd.html
+++ b/src/main/resources/templates/owner/hotelAdd.html
@@ -11,6 +11,7 @@
     <h1>숙소 등록</h1>
 
     <span>숙소를 등록하기 위한 정보를 입력해주세요.</span>
+    <input type="hidden" name="permit" value="N">
     <div>
         <div>숙소 명</div>
         <input type="text" name="ownerId" value="사업자아이디">
